# handstand-coach

./: .gitignore  README.md  detect.py  pyproject.toml
.github/workflows/: ci.yml
docs/: session-format.md
src/handstand_coach/: __init__.py  capture.py  cli.py  estimation.py  live.py  models.py  pipeline.py  recording.py  serialization.py  session.py  stream.py  ultralytics_estimator.py  visualization.py
tests/: test_capture.py  test_cli.py  test_models.py  test_package.py  test_pipeline.py  test_recording.py  test_serialization.py  test_session.py  test_stream.py  test_ultralytics_estimator.py  test_visualization.py
