[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "handstand-coach"
version = "0.1.0"
description = "Real-time handstand posture analysis using computer vision."
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "numpy>=2,<3",
    "opencv-python>=4.13,<5",
    "ultralytics>=8.4.64,<9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<10",
    "ruff>=0.9,<1",
]

[project.scripts]
handstand-coach = "handstand_coach.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100